--- a/1 Building a Microservice/exercise 1.1/Dockerfile
+++ b/1 Building a Microservice/exercise 1.1/Dockerfile
@@ -1,17 +1,17 @@
 # Pull in the layer of the base image: golang:1.11-alpine 
-FROM golang:1.13-alpine     
+FROM    
 
 # Set author label: LABEL author=[YOUR-EMAIL]
-LABEL auther=johannes.br@dynatrace.com
+LABEL 
 
 # Set working directory: `/opt`
-WORKDIR /opt
+WORKDIR 
 
 # Copy local file `main.go` to the working directory
-COPY main.go ./
+COPY 
 
 # List items in the working directory (ls -lsa) and show content of the `main.go`file (cat)
-RUN ls -lsa && cat main.go
+RUN 
 
 # Build the app (CGO_ENABLED=0 go build -o /usr/myapp) and show the /usr directory  (ls -lsa)
-RUN CGO_ENABLED=0 go build -o /usr/myapp && ls -lsa /usr
+RUN 
